Bug 313997 - Can't lock screen manually
Summary: Can't lock screen manually
Status: RESOLVED FIXED
Alias: None
Product: kscreensaver
Classification: Unmaintained
Component: locker-qml (other bugs)
Version First Reported In: 4.9.98 RC3
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-27 19:52 UTC by Benni Hill
Modified: 2013-02-11 17:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benni Hill 2013-01-27 19:52:59 UTC
Under certain circumstances it is not possible to lock the screen with <Ctrl>+<Alt>+L or via kickoff.

Reproducible: Always

Steps to Reproduce:
1. Make sure automatic screen locker is set up and "Require password after" is set to a long enough time (eg. 60 s)
2. Wait until screensaver starts and move mouse before password is required
3. Screen will unlock (without password)
Actual Results:  
Starting screenlocker manually by hotkey or kickoff won't work now.

(Automatic screen locking is still working and if you wait until password is required to unlock, manual locking will work again.)
Comment 1 Oliver Henshaw 2013-02-07 18:18:38 UTC
See https://git.reviewboard.kde.org/r/108425/
Comment 2 Oliver Henshaw 2013-02-11 17:34:24 UTC
Git commit d06e15a7b03a2391b5bc38e458e118ab673b8c61 by Oliver Henshaw.
Committed on 14/01/2013 at 13:51.
Pushed by oliverhenshaw into branch 'KDE/4.10'.

Stop grace period on unlock

It was safe to leak the grace timer when it was in the lock process,
since it was killed on unlock. Now it is not.

A password should always be required if the screenlocker is explicitly
triggered; but a screenlocker invoked while the grace timer from a
previous invocation is still active can be dismissed without a password,
at least for a short while. This also meant that the screenlocker
keyboard shortcut would not work until the grace timer expired.

REVIEW: 108425
FIXED-IN: 4.10.1

M  +2    -0    ksmserver/screenlocker/ksldapp.cpp

http://commits.kde.org/kde-workspace/d06e15a7b03a2391b5bc38e458e118ab673b8c61